test(carrier_whlc): fix the existing test

--- a/test/spiders/carrier_whlc/mbl_search/02_multiple_container/main_page.html
+++ b/test/spiders/carrier_whlc/mbl_search/02_multiple_container/main_page.html
@@ -1,7 +1,6 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
     <title>
-           萬海航運股份有限公司
+           WAN HAI LINES LTD.
 
     </title>
 
@@ -11,7 +10,7 @@
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-TCMJNBD');</script>
-    <!-- End Google Tag Manager --><link type="text/css" rel="stylesheet" href="/javax.faces.resource/style_tw.css.xhtml?ln=css"><link type="text/css" rel="stylesheet" href="/javax.faces.resource/style.css.xhtml?ln=css"><link type="text/css" rel="stylesheet" href="/javax.faces.resource/jquery-ui.css.xhtml?ln=css"><script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script></head><body class="JumpMainBody" onload="try{formInit();}catch(e){}" data-new-gr-c-s-check-loaded="14.1003.0" data-gr-ext-installed="">
+    <!-- End Google Tag Manager --><link type="text/css" rel="stylesheet" href="/javax.faces.resource/style_www.css.xhtml?ln=css"><link type="text/css" rel="stylesheet" href="/javax.faces.resource/style.css.xhtml?ln=css"><link type="text/css" rel="stylesheet" href="/javax.faces.resource/jquery-ui.css.xhtml?ln=css"></head><body class="JumpMainBody" onload="try{formInit();}catch(e){}">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TCMJNBD" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
@@ -62,7 +61,7 @@
 
               <!-- program title start -->
               <div class="MainTitleBox">
-                 <h2 class="CrumbreadTitle">貨櫃動態查詢列表
+                 <h2 class="CrumbreadTitle">Cargo Tracking List
                  </h2>
               </div><br class="cleaner">
               <!-- program title end -->
@@ -116,162 +115,78 @@ Object : ?????????????
 <!-- body content start -->
 
 
-  <strong>貨物動態信息僅供參考，萬海有權修改相關信息。</strong>
+  <strong>*Cargo tracking information is for reference only. Wan Hai reserves the right to amend the relevant information. </strong>
   <br><br>
 
-     <table width="100%" border="1" cellpadding="0" cellspacing="0" class="tbl-list">
+     <table class="tbl-list" width="100%" cellspacing="0" cellpadding="0" border="1">
        <tbody><tr style="background-color: rgb(247, 247, 247);">
-         <th>明細查詢</th>
-         <th>櫃號</th>
-         <th>櫃型</th>
-         <th>提單號碼</th>
-         <th>狀態</th>
-         <th>日期</th>
-         <th>櫃場名稱</th>
-         <th>地區</th>
-         <th>航次號碼</th>
-         <th>船名</th>
-         <th>歷史動態</th>
+         <th>More detail</th>
+         <th>Ctnr No.</th>
+         <th>Ctnr ISO</th>
+         <th>BL no.</th>
+         <th>Status Name</th>
+         <th>Ctnr Date</th>
+         <th>Ctnr Depot Name</th>
+         <th>Place Name</th>
+         <th>Voy No</th>
+         <th>Vessel Name</th>
+         <th>More History</th>
        </tr>
          <tr>
            <td>
                <u>
 <script type="text/javascript" src="/javax.faces.resource/jsf.js.xhtml?ln=javax.faces&amp;stage=Development"></script>
-<a id="j_idt39:0:ctnr_list_more_detail" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:0:ctnr_list_more_detail':'j_idt39:0:ctnr_list_more_detail','q_ctnr_no':'DFSU7657460','q_bl_no':'027B555014'},'_blank');return false">More Detail</a>
+<a id="j_idt39:0:ctnr_list_more_detail" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:0:ctnr_list_more_detail':'j_idt39:0:ctnr_list_more_detail','q_ctnr_no':'WHLU2944422','q_bl_no':'025B648783'},'_blank');return false">More Detail</a>
               </u>
            </td>
-           <td>DFSU7657460
+           <td>WHLU2944422
            </td>
-           <td>45G1
+           <td>22G1
            </td>
-           <td>027B555014
+           <td>025B648783
            </td>
-           <td>出口重櫃進場
+           <td>LADEN CTNR LOADED ON BOARD VESSEL.(MOTHER VESSEL,FIXED SLOT CHARTER/JOINT VENTURE VESSEL)
            </td>
-           <td>2021/04/03 17:26
+           <td>2021/08/12 02:52
            </td>
-           <td>SIPG尚東集裝箱碼頭分公司（洋山四期）
+           <td>SKU01
           </td>
           <td>
            </td>
-           <td>
+           <td>E005
+           </td>
+           <td>WAN HAI 522
            </td>
            <td>
-           </td>
-           <td>
-             <u><a id="j_idt39:0:ctnr_list_more_history" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:0:ctnr_list_more_history':'j_idt39:0:ctnr_list_more_history','q_ctnr_no':'DFSU7657460','q_bl_no':'027B555014'},'_blank');return false">More History</a>
+             <u><a id="j_idt39:0:ctnr_list_more_history" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:0:ctnr_list_more_history':'j_idt39:0:ctnr_list_more_history','q_ctnr_no':'WHLU2944422','q_bl_no':'025B648783'},'_blank');return false">More History</a>
              </u>
            </td>
          </tr>
          <tr style="background-color: rgb(247, 247, 247);">
            <td>
-               <u><a id="j_idt39:1:ctnr_list_more_detail" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:1:ctnr_list_more_detail':'j_idt39:1:ctnr_list_more_detail','q_ctnr_no':'WHSU4015411','q_bl_no':'027B555014'},'_blank');return false">More Detail</a>
+               <u><a id="j_idt39:1:ctnr_list_more_detail" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:1:ctnr_list_more_detail':'j_idt39:1:ctnr_list_more_detail','q_ctnr_no':'WHSU2162814','q_bl_no':'025B648783'},'_blank');return false">More Detail</a>
               </u>
            </td>
-           <td>WHSU4015411
+           <td>WHSU2162814
            </td>
-           <td>42G1
+           <td>22G1
            </td>
-           <td>027B555014
+           <td>025B648783
            </td>
-           <td>出口重櫃進場
+           <td>LADEN CTNR LOADED ON BOARD VESSEL.(MOTHER VESSEL,FIXED SLOT CHARTER/JOINT VENTURE VESSEL)
            </td>
-           <td>2021/04/03 21:03
+           <td>2021/08/12 02:52
            </td>
-           <td>SIPG尚東集裝箱碼頭分公司（洋山四期）
+           <td>SKU01
           </td>
           <td>
            </td>
-           <td>
+           <td>E005
+           </td>
+           <td>WAN HAI 522
            </td>
            <td>
-           </td>
-           <td>
-             <u><a id="j_idt39:1:ctnr_list_more_history" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:1:ctnr_list_more_history':'j_idt39:1:ctnr_list_more_history','q_ctnr_no':'WHSU4015411','q_bl_no':'027B555014'},'_blank');return false">More History</a>
-             </u>
-           </td>
-         </tr>
-         <tr>
-           <td>
-               <u><a id="j_idt39:2:ctnr_list_more_detail" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:2:ctnr_list_more_detail':'j_idt39:2:ctnr_list_more_detail','q_ctnr_no':'WHSU4018180','q_bl_no':'027B555014'},'_blank');return false">More Detail</a>
-              </u>
-           </td>
-           <td>WHSU4018180
-           </td>
-           <td>42G1
-           </td>
-           <td>027B555014
-           </td>
-           <td>出口重櫃進場
-           </td>
-           <td>2021/04/03 22:19
-           </td>
-           <td>SIPG尚東集裝箱碼頭分公司（洋山四期）
-          </td>
-          <td>
-           </td>
-           <td>
-           </td>
-           <td>
-           </td>
-           <td>
-             <u><a id="j_idt39:2:ctnr_list_more_history" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:2:ctnr_list_more_history':'j_idt39:2:ctnr_list_more_history','q_ctnr_no':'WHSU4018180','q_bl_no':'027B555014'},'_blank');return false">More History</a>
-             </u>
-           </td>
-         </tr>
-         <tr style="background-color: rgb(247, 247, 247);">
-           <td>
-               <u><a id="j_idt39:3:ctnr_list_more_detail" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:3:ctnr_list_more_detail':'j_idt39:3:ctnr_list_more_detail','q_ctnr_no':'WHSU4031006','q_bl_no':'027B555014'},'_blank');return false">More Detail</a>
-              </u>
-           </td>
-           <td>WHSU4031006
-           </td>
-           <td>42G1
-           </td>
-           <td>027B555014
-           </td>
-           <td>出口重櫃進場
-           </td>
-           <td>2021/04/03 20:47
-           </td>
-           <td>SIPG尚東集裝箱碼頭分公司（洋山四期）
-          </td>
-          <td>
-           </td>
-           <td>
-           </td>
-           <td>
-           </td>
-           <td>
-             <u><a id="j_idt39:3:ctnr_list_more_history" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:3:ctnr_list_more_history':'j_idt39:3:ctnr_list_more_history','q_ctnr_no':'WHSU4031006','q_bl_no':'027B555014'},'_blank');return false">More History</a>
-             </u>
-           </td>
-         </tr>
-         <tr>
-           <td>
-               <u><a id="j_idt39:4:ctnr_list_more_detail" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:4:ctnr_list_more_detail':'j_idt39:4:ctnr_list_more_detail','q_ctnr_no':'WHSU5656976','q_bl_no':'027B555014'},'_blank');return false">More Detail</a>
-              </u>
-           </td>
-           <td>WHSU5656976
-           </td>
-           <td>45G1
-           </td>
-           <td>027B555014
-           </td>
-           <td>出口重櫃進場
-           </td>
-           <td>2021/04/03 19:18
-           </td>
-           <td>SIPG尚東集裝箱碼頭分公司（洋山四期）
-          </td>
-          <td>
-           </td>
-           <td>
-           </td>
-           <td>
-           </td>
-           <td>
-             <u><a id="j_idt39:4:ctnr_list_more_history" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:4:ctnr_list_more_history':'j_idt39:4:ctnr_list_more_history','q_ctnr_no':'WHSU5656976','q_bl_no':'027B555014'},'_blank');return false">More History</a>
+             <u><a id="j_idt39:1:ctnr_list_more_history" href="#" onclick="mojarra.jsfcljs(document.getElementById('cargoTrackListBean'),{'j_idt39:1:ctnr_list_more_history':'j_idt39:1:ctnr_list_more_history','q_ctnr_no':'WHSU2162814','q_bl_no':'025B648783'},'_blank');return false">More History</a>
              </u>
            </td>
          </tr>
@@ -279,9 +194,9 @@ Object : ?????????????
      	 <!--
        &lt;br/&gt;
        &lt;h:link outcome=&quot;/views/cargoTrack/CargoTrack.xhtml&quot; class=&quot;back&quot;&gt;
-         &#19978;&#19968;&#38913;
+         Page Up
        &lt;/h:link&gt;
-       --><input type="hidden" name="javax.faces.ViewState" id="javax.faces.ViewState" value="921824142336799249:6874449828622914990" autocomplete="off">
+       --><input type="hidden" name="javax.faces.ViewState" id="javax.faces.ViewState" value="2880809728431430065:-3935049908337640553" autocomplete="off">
 </form>
 <br><br><br>
               <!-- content area end -->
@@ -299,7 +214,7 @@ Object : ?????????????
              <!-- for WHL site start -->
                 <div id="index-footer" class="copy">
                    <div>
-							<a class="inconspicuous_link" href="/html/PrivacyPolicyTW.html" target="_blank">Privacy Policy</a> &nbsp;&nbsp; |
+							<a class="inconspicuous_link" href="/html/PrivacyPolicyEN.html" target="_blank">Privacy Policy</a> &nbsp;&nbsp; |
 
 						&nbsp;&nbsp; Copyright © WAN HAI LINES LTD. All rights reserved.
 					</div>
