test(carrier_hdmu): correct test for main info

--- a/test/spiders/carrier_hdmu/main_info/02_multiple_containers/sample.html
+++ b/test/spiders/carrier_hdmu/main_info/02_multiple_containers/sample.html
@@ -1207,7 +1207,7 @@
 	
 	
 					<!--td onMouseOver="javascript:vesseldlyInfoshowtip(event, 'Status: 1.0 hours delayed  than estimated time by Huge Movement at SHANGHAI,CHINA', 'N', 'N');" onMouseOut="javascript:vesseldlyInfohidetip()" >SHANGHAI,CHINA [!]</td -->
-					<td>SHANGHAI,CHINA&nbsp;<a href="#" onMouseOver="javascript:vesseldlyInfoshowtip(event, 'Status: 1.0 hours delayed  than estimated time by Huge Movement at SHANGHAI,CHINA', 'N', 'N');" onMouseOut="javascript:vesseldlyInfohidetip()" ><font color="red">[!]</font></a></td>
+					<td>SHANGHAI,CHINA</td>
 
 
 					<td>
