--- a/test/spiders/carrier_hdmu/main_info/05_1_without_lfd/sample.html
+++ b/test/spiders/carrier_hdmu/main_info/05_1_without_lfd/sample.html
@@ -1107,7 +1107,7 @@
 	
 	
 					<!--td onMouseOver="javascript:vesseldlyInfoshowtip(event, 'Status: 0.0 hours delayed  than estimated time due to Berth Congestion by Huge Movement at SHANGHAI,CHINA', 'N', 'N');" onMouseOut="javascript:vesseldlyInfohidetip()" >SHANGHAI,CHINA [!]</td -->
-					<td>SHANGHAI,CHINA&nbsp;<a href="#" onMouseOver="javascript:vesseldlyInfoshowtip(event, 'Status: 0.0 hours delayed  than estimated time due to Berth Congestion by Huge Movement at SHANGHAI,CHINA', 'N', 'N');" onMouseOut="javascript:vesseldlyInfohidetip()" ><font color="red">[!]</font></a></td>
+					<td>SHANGHAI,CHINA</td>
 
 
 					<td>
