test(carrier_hdmu_multi): fix test
[why] fix test according to website update
[how] update new html files

--- a/test/spiders/carrier_hdmu_multi/main_info/06_2_original_bl/sample.html
+++ b/test/spiders/carrier_hdmu_multi/main_info/06_2_original_bl/sample.html
@@ -902,7 +902,7 @@
 
 
 					<tr>
-						<td class="bor_L_none">Arrival</td>
+						<td class="bor_L_none">Arrival(ETB)</td>
 						<td></td>
 						<td><span class="font_blue">27-Jul-2019<br/>3:46 PM&nbsp;</span></td>
 
@@ -1425,7 +1425,7 @@
 	}
 </script>
 
-<script type="text/javascript">	
+<script type="text/javascript">
 	document.getElementById("loadingBar").style.display = "none";
 	document.getElementById("trackingForm").style.display = "";
 </script>
